--- a/Yapbam/src/localization/contributors.html
+++ b/Yapbam/src/localization/contributors.html
@@ -14,11 +14,10 @@ color: #aa0000;
 color: #ff9900;
 }
 -->
-</style></head><body>
+</style></head>
+<body>
 <h1>Contributors</h1>
 English translation: <a href="http://minervah.users.sourceforge.net/">Sharada Palagummi</a><br>
 Portuguese translation: <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a>, Robert Marques Maia<br>
-German translation: <a href="http://jrthies.users.sourceforge.net/">Jean-Ren&eacute; Thies</a><br>
-Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
-Development, web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc Astesana (Fathzer)</a><br>
+German translation: <a href="http://jrthies.users.sourceforge.net/">Jean-René Thies</a><br><br>French user guide: Christian Record<br><br>Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br><br>Development, web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc Astesana (Fathzer)</a><br>
 </body></html>
