--- a/Yapbam/src/localization/fr/contributors.html
+++ b/Yapbam/src/localization/fr/contributors.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Contributeurs</title>
 
 <style type="text/css">
@@ -14,11 +13,18 @@ color: #aa0000;
 color: #ff9900;
 }
 -->
-</style></head><body>
+</style>
+</head>
+<body>
 <h1>Contributeurs</h1>
 Traduction anglaise : <a href="http://minervah.users.sourceforge.net/">Sharada Palagummi</a><br>
-Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza, Robert Marques Maia</a><br>
-Traduction allemande : <a href="http://jrthies.users.sourceforge.net/">Jean-Ren&eacute; Thies</a><br>
+Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a>, Robert Marques Maia<br>
+Traduction allemande : <a href="http://jrthies.users.sourceforge.net/">Jean-René Thies</a><br>
+<br>
 Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
-Développement, site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc Astesana (Fathzer)</a><br>
+<br>
+Mode d'emploi français : Christian Record<br>
+<br>
+Développement, site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
+Astesana (Fathzer)</a><br>
 </body></html>
