--- a/Yapbam/src/localization/license.html
+++ b/Yapbam/src/localization/license.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
 
-<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head><body>
+<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head>
+<body>
 This
 program is free software: you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
@@ -18,14 +19,14 @@ The splash screen of this application is based on a picture from (<a href="http:
 licensed under <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
 License</a>.
 <br><br>
-This software use the A-JLib library released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU
+This software uses the A-JLib library released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU
 General Public License</a>.
 The source code of this library is available at <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.<br>
-<br>
-This software use the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
+<br>This software uses commons-lang and commons-net libraries under Apache
+license version 2.&nbsp;The source code of these libraries is available at &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>This software uses the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
 The source code of this library is available at <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br><br>
-This software use a modified version of Currency converter written by Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Its source code is included in Yapbam sources (net.yapbam.currency.CurrencyConverter).<br><br>
-This software use a modified version of a component&nbsp;written by <a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen Kelvin</a>. Its source code&nbsp;is included in Yapbam sources (net.yapbam.gui.util.XTableColumnModel).<br><br>
-This software use a&nbsp;component&nbsp;written by&nbsp;<a href="http://terai.xrea.jp/">Atsuhiro Terai</a> released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Its source code&nbsp;is included in Yapbam sources (terai.xrea.jp.DndTabbedPane).<br><br>The windows executable is created with <a href="http://launch4j.sourceforge.net/">Launch4J</a>, released under <a href="http://www.opensource.org/licenses/bsd-license.html">BSD license</a>.
+This software uses a modified version of Currency converter written by Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Its source code is included in Yapbam sources (net.yapbam.currency.CurrencyConverter).<br><br>
+This software uses a modified version of a component&nbsp;written by <a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen Kelvin</a>. Its source code&nbsp;is included in Yapbam sources (net.yapbam.gui.util.XTableColumnModel).<br><br>
+This software uses a&nbsp;component&nbsp;written by&nbsp;<a href="http://terai.xrea.jp/">Atsuhiro Terai</a> released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Its source code&nbsp;is included in Yapbam sources (terai.xrea.jp.DndTabbedPane).<br><br>The windows executable is created with <a href="http://launch4j.sourceforge.net/">Launch4J</a>, released under <a href="http://www.opensource.org/licenses/bsd-license.html">BSD license</a>.
 </body></html>
