--- a/deliveryProcess.html
+++ b/deliveryProcess.html
@@ -26,14 +26,14 @@ manager window.</li>
 </li>
 <li>Test that the archive is ok (extract its content to a new
 folder, and try yapbam from it).</li><li>Copy back the modified archive on a windows platform.</li><li>Create the windows installer with NSIS.<br>
-select the "Installer based on a zip file" option and enter "$EXEDIR\Yapbam" as default folder.</li><li>Run the deployer in project YapbamDeployment.<br>Wait for it completes (it is long as this class upload Yapbam to sourceForge).</li><li>Test that the autoupdate is ok with a copy of the previous version of
+select the "Installer based on a zip file" option and enter "$EXEDIR\Yapbam" as default folder.</li><li>Run the deployer in project YapbamDeployment (Be aware to set the right versions in the program arguments).<br>Wait for it completes (it is long as this class upload Yapbam to sourceForge).</li><li>Test that the autoupdate is ok with a copy of the previous version of
 yapbam. Also test that the&nbsp;archives on sourceforge are ok ... sometimes,
 upload results in a partial file.</li>
 <li>In the sourceforge file browser, give the linux, BSD,
 etc... attributes (or windows) to the new uploaded files.</li><li>Commit pending changes to svn repository.</li>
 <li>Post a comment on twitter.</li>
 <li>Post replies on opened bug report or feature requests.</li>
-<li>Mise à jour du référencement par anshare (www.anshare.org)</li><ol><li>Copier le .exe dans le répertoire&nbsp;directDownload du site Web.</li><li>Mettre à jour la fiche logiciel :</li><ol><li>Mettre
+<li>Mise à jour du référencement par anshare (www.anshare.org)</li><ol><li>Mettre à jour la fiche logiciel :</li><ol><li>Mettre
 un lien vers cet .exe (les liens de téléchargement de sourceforge sont
 interdits) : http://www.yapbam.net/directDownload/yapbam-<span style="font-style: italic;">version</span>.exe.</li><li>Supprimer
 Linux dans les OS cible (l'auteur du site ne connait pas le principe de
