--- a/src/localization/license.html
+++ b/src/localization/license.html
@@ -21,7 +21,9 @@ License</a>.
 <br><br>
 This software uses the A-JLib library released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU
 General Public License</a>.
-The source code of this library is available at <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.<br>
+The source code of this library is available at <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.<br><br>
+This software uses the Javaluator library released under&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">LGPL v3 license</a>.
+The source code of this library is available at <a href="http://sourceforge.net/projects/javaluator/">http://sourceforge.net/projects/javaluator/</a>.<br>
 <br>This software uses commons-lang and commons-net libraries under Apache
 license version 2.&nbsp;The source code of these libraries is available at &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>This software uses the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
 The source code of this library is available at <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
