--- a/Yapbam/src/localization/fr/license.html
+++ b/Yapbam/src/localization/fr/license.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
+<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title>
 
-<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head>
+</head>
 <body>
 Ce programme est un logiciel libre&nbsp;; vous pouvez le
 redistribuer ou le modifier suivant les termes de la <em lang="en">&#8220;GNU
@@ -21,16 +22,43 @@ française</a>).
 L'écran de démarrage est basé sur une image originale de&nbsp;(<a href="http://www.flickr.com/people/ppdigital/">Darren Hester</a>)
 publiée sous license <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
 License</a>.
-<br><br>Ce logiciel utilise la librairie A-JLib sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">License
+<br>
+<br>
+Ce logiciel utilise la librairie A-JLib sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">License
 Générale
 Publique GNU</a>.
 Le code source de cette librairie est disponible ici : <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.
 <br>
 <br>
+Ce logiciel utilise la librairie Javaluator sous&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">LGPL v3 license</a>.
+Le code source de cette librairie est disponible ici : <a href="http://sourceforge.net/projects/javaluator/">http://sourceforge.net/projects/javaluator/</a>.
+<br>
+<br>
 Ce logiciel utilise les librairies commons-lang et commons-net sous
-license Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
+license Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br>
+<br>
+Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General
+Public License</a>.
 Le code source de cette librairie est disponible ici : <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
-<br><br>
-Ce logiciel utilise une version modifiée du convertisseur de devises écrit par Thomas Knierim sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Son code source est inclus dans les sources de Yapbam (net.yapbam.tools.currency.converter.CurrencyConverter).<br><br>
-Ce logiciel utilise une version modifiée d'un composant écrit par&nbsp;<a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen Kelvin</a>. Son code source est inclus dans les sources de Yapbam (net.yapbam.gui.util.XTableColumnModel).<br><br>Ce logiciel utilise un composant écrit par <a href="http://terai.xrea.jp/">Atsuhiro Terai</a> sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Son code est inclus dans les sources de Yapbam (terai.xrea.jp.DndTabbedPane).<br><br>L'application windows est générée avec <a href="http://launch4j.sourceforge.net/">Launch4J</a>. Launch4J est distribué sous&nbsp;<a href="http://www.opensource.org/licenses/bsd-license.html">Licence BSD</a>.<br><br>
+<br>
+<br>
+Ce logiciel utilise une version modifiée du convertisseur de devises
+écrit par Thomas Knierim sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
+Public License</a>. Son code source est inclus dans les sources
+de Yapbam (net.yapbam.tools.currency.converter.CurrencyConverter).<br>
+<br>
+Ce logiciel utilise une version modifiée d'un composant écrit
+par&nbsp;<a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen
+Kelvin</a>. Son code source est inclus dans les sources de Yapbam
+(net.yapbam.gui.util.XTableColumnModel).<br>
+<br>
+Ce logiciel utilise un composant écrit par <a href="http://terai.xrea.jp/">Atsuhiro Terai</a> sous
+license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
+Public License</a>. Son code est inclus dans les sources de
+Yapbam (terai.xrea.jp.DndTabbedPane).<br>
+<br>
+L'application windows est générée avec <a href="http://launch4j.sourceforge.net/">Launch4J</a>.
+Launch4J est distribué sous&nbsp;<a href="http://www.opensource.org/licenses/bsd-license.html">Licence
+BSD</a>.<br>
+<br>
 </body></html>
