--- a/Yapbam/deliveryProcess.html
+++ b/Yapbam/deliveryProcess.html
@@ -13,19 +13,9 @@ text-decoration: underline;
 <li>Set the version number in the build.xml file =&gt; <span class="variable">version</span></li>
 <li>Build the classic distribution with build.xml.<br>
 <span class="variable"></span></li>
-<li>Upload the generated .zip file to a linux platform and
-change the "execute attribute" of "yapbam.sh" file.<br>
-To do that :<br>
-<ol>
-<li>Extract yapbam.sh from the ubuntu&nbsp;archive
-manager.</li>
-<li>Change the attribute.</li>
-<li>Drag and drop the file to the archive in the archive
-manager window.</li>
-</ol>
-</li>
+
 <li>Test that the archive is ok (extract its content to a new
-folder, and try yapbam from it).</li><li>Copy back the modified archive on a windows platform.</li><li>Create the windows installer with NSIS.<br>
+folder, and try yapbam from it).</li><li>Create the windows installer with NSIS.<br>
 select the "Installer based on a zip file" option and enter "$EXEDIR\Yapbam" as default folder.</li><li>Run the deployer in project YapbamDeployment (Be aware to set the right versions in the program arguments).<br>Wait for it completes (it is long as this class upload Yapbam to sourceForge).</li><li>Test that the autoupdate is ok with a copy of the previous version of
 yapbam. Also test that the&nbsp;archives on sourceforge are ok ... sometimes,
 upload results in a partial file.</li>
