--- a/deliveryProcess.html
+++ b/deliveryProcess.html
@@ -14,8 +14,7 @@ text-decoration: underline;
 <li>Build the classic distribution with build.xml.<br>
 <span class="variable"></span></li>
 
-<li>Test that the archive is ok (extract its content to a new
-folder, and try yapbam from it).</li><li>Create the windows installer with NSIS.<br>
+<li>Create the windows installer with NSIS.<br>
 select the "Installer based on a zip file" option and enter "$EXEDIR\Yapbam" as default folder.</li><li>Run the deployer in project YapbamDeployment (Be aware to set the right versions in the program arguments).<br>Wait for it completes (it is long as this class upload Yapbam to sourceForge).</li><li>Test that the autoupdate is ok with a copy of the previous version of
 yapbam. Also test that the&nbsp;archives on sourceforge are ok ... sometimes,
 upload results in a partial file.</li>
