--- a/src/localization/fr/license.html
+++ b/src/localization/fr/license.html
@@ -27,15 +27,27 @@ License</a>.
 Ce logiciel utilise la librairie A-JLib sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">License
 Générale
 Publique GNU</a>.
-Le code source de cette librairie est disponible ici : <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.
+Le code source de cette librairie est disponible ici&nbsp;: <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.
 <br>
 <br>
-Ce logiciel utilise la librairie Javaluator sous&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">LGPL v3 license</a>.
+Ce logiciel utilise la librairie JClop sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">License
+Générale
+Publique GNU</a>.
+Le code source de cette librairie est disponible ici&nbsp;: <a href="http://sourceforge.net/projects/jclop/">http://sourceforge.net/projects/jclop/</a>.<br>
+<br>
+Ce logiciel utilise la librairie Javaluator sous&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">LGPL v3
+license</a>.
 Le code source de cette librairie est disponible ici : <a href="http://sourceforge.net/projects/javaluator/">http://sourceforge.net/projects/javaluator/</a>.
 <br>
 <br>
-Ce logiciel utilise les librairies commons-lang et commons-net sous
-license Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br>
+Ce logiciel utilise les librairies commons-lang, commons-logging et commons-codec sous
+license Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>
+Ce logiciel utilise les librairies&nbsp;http-core, http-mime et http-client sous
+license Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>
+Ce logiciel utilise la librairie&nbsp;json-simple sous
+license Apache version 2. Le code source est disponible ici :&nbsp;<a href="http://code.google.com/p/json-simple/">http://code.google.com/p/json-simple/</a><br><br>
+Ce logiciel utilise la librairie&nbsp;Core Dropbox API sous
+license MIT. Le code source est disponible ici :&nbsp;&nbsp;<a href="http://www.dropbox.com/developers">http://www.dropbox.com/developers</a><a href="http://code.google.com/p/json-simple/"></a><br><a href="http://commons.apache.org/"></a>
 <br>
 Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General
 Public License</a>.
