--- a/src/localization/license.html
+++ b/src/localization/license.html
@@ -22,10 +22,16 @@ License</a>.
 This software uses the A-JLib library released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU
 General Public License</a>.
 The source code of this library is available at <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.<br><br>
+This software uses the JClop library released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU
+General Public License</a>.
+The source code of this library is available at&nbsp;<a href="http://sourceforge.net/projects/jclop/">http://sourceforge.net/projects/jclop/</a>.<br><br>
 This software uses the Javaluator library released under&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">LGPL v3 license</a>.
 The source code of this library is available at <a href="http://sourceforge.net/projects/javaluator/">http://sourceforge.net/projects/javaluator/</a>.<br>
-<br>This software uses commons-lang and commons-net libraries under Apache
-license version 2.&nbsp;The source code of these libraries is available at &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>This software uses the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
+<br>This software uses commons-lang, commons-logging and commons-codec libraries under Apache
+license version 2.&nbsp;The source code of these libraries is available at &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>This software uses http-core, http-mime and http-client libraries under Apache
+license version 2.&nbsp;The source code of these libraries is available at&nbsp;<a href="http://hc.apache.org/">http://hc.apache.org/</a><br><br>This software uses json-simple under Apache
+license version 2.&nbsp;The source code of these libraries is available at&nbsp;<a href="http://code.google.com/p/json-simple/">http://code.google.com/p/json-simple/</a><br><br>This software uses Core Dropbox API under MIT
+license.&nbsp;The source code of these libraries is available at&nbsp;<a href="http://www.dropbox.com/developers">http://www.dropbox.com/developers</a><a href="https://code.google.com/p/json-simple/"></a><br><a href="http://hc.apache.org/"></a><a href="http://commons.apache.org/"></a><br>This software uses the JFreeChart library released under <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General Public License</a>.
 The source code of this library is available at <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br><br>
 This software uses a modified version of Currency converter written by Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General Public License</a>. Its source code is included in Yapbam sources (net.yapbam.currency.CurrencyConverter).<br><br>
