--- a/Yapbam/src/localization/fr/license.html
+++ b/Yapbam/src/localization/fr/license.html
@@ -43,19 +43,21 @@ license Apache version 2. Le code source est disponible ici : &nbsp;<a href="htt
 Ce logiciel utilise les librairies&nbsp;http-core, http-mime et http-client sous
 license Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>
 Ce logiciel utilise la librairie&nbsp;json-simple sous
-license Apache version 2. Le code source est disponible ici :&nbsp;<a href="http://code.google.com/p/json-simple/">http://code.google.com/p/json-simple/</a><br><br>
-Ce logiciel utilise la librairie&nbsp;Core Dropbox API sous
-license MIT. Le code source est disponible ici :&nbsp;&nbsp;<a href="http://www.dropbox.com/developers">http://www.dropbox.com/developers</a><a href="http://code.google.com/p/json-simple/"></a><br><a href="http://commons.apache.org/"></a>
+license Apache version 2. Le code source est disponible ici :&nbsp;<a href="http://code.google.com/p/json-simple/">http://code.google.com/p/json-simple/</a><br>
+<br>
+Ce logiciel utilise la librairie&nbsp;Core Dropbox API sous license MIT. Le code source est disponible ici :&nbsp<a href="http://www.dropbox.com/developers">http://www.dropbox.com/developers</a><br>
 <br>
 Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General
 Public License</a>.
 Le code source de cette librairie est disponible ici : <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br>
 <br>Ce logiciel utilise la librairie OpenCSV sous
-license Apache version 2. Le code source est disponible ici&nbsp;<a href="http://opencsv.sourceforge.net/">http://opencsv.sourceforge.net</a>.<br><br>&nbsp;Ce logiciel utilise une version modifiée du convertisseur de devises
-écrit par Thomas Knierim sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
-Public License</a>. Son code source est inclus dans les sources
-de Yapbam (net.yapbam.tools.currency.converter.CurrencyConverter).<br>
+license Apache version 2. Le code source est disponible ici&nbsp;<a href="http://opencsv.sourceforge.net/">http://opencsv.sourceforge.net</a>.<br>
+<br>
+Ce logiciel utilise un convertisseur de devises
+inspiré par une classe écrite par Thomas Knierim sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
+Public License</a>. Le code source de ce convertisseur est inclus dans les sources
+de Yapbam (net.yapbam.currency).<br>
 <br>
 Ce logiciel utilise une version modifiée d'un composant écrit
 par&nbsp;<a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen
