--- a/src/localization/license.html
+++ b/src/localization/license.html
@@ -60,10 +60,10 @@ This software uses the OpenCSV library released under Apache
 license version 2.&nbsp;The source code of these libraries is
 available at&nbsp;<a href="http://opencsv.sourceforge.net/">http://opencsv.sourceforge.net</a>.<br>
 <br>
-This software uses a modified version of Currency converter written by
-Thomas Knierim released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
+This software uses a currency converter inspired by a class written by
+Thomas Knierim and released under <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
 Public License</a>. Its source code is included in Yapbam sources
-(net.yapbam.currency.CurrencyConverter).<br>
+(net.yapbam.currency).<br>
 <br>
 This software uses a modified version of a component&nbsp;written
 by <a href="http://www.stephenkelvin.de/XTableColumnModel/">Stephen
