--- a/Yapbam/src/localization/fr/contributors.html
+++ b/Yapbam/src/localization/fr/contributors.html
@@ -14,8 +14,7 @@ color: #aa0000;
 color: #ff9900;
 }
 -->
-</style>
-  </head>
+</style> </head>
   <body>
     <h1>Contributeurs</h1>
     Traduction anglaise : <a href="http://minervah.users.sourceforge.net/">Sharada
@@ -30,10 +29,8 @@ color: #ff9900;
     Mode d'emploi français : Christian Record<br>
     <br>
     Développement : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
-      Astesana (Fathzer)</a>, <a href="https://sourceforge.net/u/fduminy/">Fabien
-      Duminy</a><br>
+      Astesana (Fathzer)</a>, <a href="http://www.duminy.fr/">Fabien Duminy</a><br>
     Site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
-Astesana
-      (Fathzer)</a><br>
+      Astesana (Fathzer)</a><a href="http://www.duminy.fr/"></a>
   </body>
 </html>
