--- a/Yapbam/src/localization/contributors.html
+++ b/Yapbam/src/localization/contributors.html
@@ -32,5 +32,6 @@ color: #ff9900;
       Astesana (Fathzer)</a>, <a href="http://www.duminy.fr/">Fabien Duminy</a><br>
     Web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
       Astesana (Fathzer)</a><br>
+    <br><br>Special thanks to Lionel, François-Paul and Marine for lending their Macintosh to test Yapbam on MacOS.
   </body>
 </html>
