--- a/Yapbam/src/localization/fr/license.html
+++ b/Yapbam/src/localization/fr/license.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head>
-<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>License</title></head>
+<meta content="text/html;charset=ISO-8859-1" http-equiv="Content-Type"><title>Licence</title></head>
 <body>
 Ce programme est un logiciel libre&nbsp;; vous pouvez le
 redistribuer ou le modifier suivant les termes de la <em lang="en">&#8220;GNU
@@ -13,49 +13,48 @@ SANS AUCUNE GARANTIE&nbsp;: sans même la garantie implicite de
 COMMERCIALISABILITÉ ni
 d&#8217;ADÉQUATION À UN OBJECTIF PARTICULIER. Consultez la <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">Licence
 Générale
-Publique GNU</a> pour plus de détails (<a href="http://www.april.org/files/groupes/trad-gpl/doc/GPLv3/www.rodage.org/gpl-3.0.fr.html?q=groupes/trad-gpl/doc/GPLv3/www.rodage.org/gpl-3.0.fr.html">traduction
+Publique GNU</a> pour plus de détails (<a href="http://org.rodage.com//gpl-3.0.fr.txt">traduction
 française</a>).
 <br>
 <br>
 L'écran de démarrage est basé sur une image originale de&nbsp;(<a href="http://www.flickr.com/people/ppdigital/">Darren Hester</a>)
-publiée sous license <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
+publiée sous licence <a href="http://creativecommons.org/licenses/by-nc/3.0/" rel="nofollow">Creative Commons Attribution Non-Commercial
 License</a>.
 <br>
 <br>
-Ce logiciel utilise la librairie A-JLib sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">License
+Ce logiciel utilise la librairie A-JLib sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">Licence
 Générale
 Publique GNU</a>.
 Le code source de cette librairie est disponible ici&nbsp;: <a href="http://sourceforge.net/projects/ajlib/">http://sourceforge.net/projects/ajlib/</a>.
 <br>
 <br>
-Ce logiciel utilise la librairie JClop sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">License
+Ce logiciel utilise la librairie JClop sous <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html">Licence
 Générale
 Publique GNU</a>.
 Le code source de cette librairie est disponible ici&nbsp;: <a href="http://sourceforge.net/projects/jclop/">http://sourceforge.net/projects/jclop/</a>.<br>
 <br>
-Ce logiciel utilise la librairie Javaluator sous&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">LGPL v3
-license</a>.
+Ce logiciel utilise la librairie Javaluator sous&nbsp;<a href="http://opensource.org/licenses/lgpl-3.0.html">Licence LGPL v3</a>.
 Le code source de cette librairie est disponible ici : <a href="http://sourceforge.net/projects/javaluator/">http://sourceforge.net/projects/javaluator/</a>.
 <br>
 <br>
 Ce logiciel utilise les librairies commons-lang, commons-logging et commons-codec sous
-license Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>
+licence Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>
 Ce logiciel utilise les librairies&nbsp;http-core, http-mime et http-client sous
-license Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>
+licence Apache version 2. Le code source est disponible ici : &nbsp;<a href="http://commons.apache.org/">http://commons.apache.org/</a><br><br>
 Ce logiciel utilise la librairie&nbsp;json-simple sous
-license Apache version 2. Le code source est disponible ici :&nbsp;<a href="http://code.google.com/p/json-simple/">http://code.google.com/p/json-simple/</a><br>
+licence Apache version 2. Le code source est disponible ici :&nbsp;<a href="http://code.google.com/p/json-simple/">http://code.google.com/p/json-simple/</a><br>
 <br>
-Ce logiciel utilise la librairie&nbsp;Core Dropbox API sous license MIT. Le code source est disponible ici :&nbsp<a href="http://www.dropbox.com/developers">http://www.dropbox.com/developers</a><br>
+Ce logiciel utilise la librairie&nbsp;Core Dropbox API sous licence MIT. Le code source est disponible ici :&nbsp<a href="http://www.dropbox.com/developers">http://www.dropbox.com/developers</a><br>
 <br>
-Ce logiciel utilise la librairie JFreeChart sous license <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General
+Ce logiciel utilise la librairie JFreeChart sous licence <a href="http://www.gnu.org/licenses/lgpl.html">Lesser General
 Public License</a>.
 Le code source de cette librairie est disponible ici : <a href="http://www.jfree.org/jfreechart/">http://www.jfree.org/jfreechart/</a>.
 <br>
 <br>Ce logiciel utilise la librairie OpenCSV sous
-license Apache version 2. Le code source est disponible ici&nbsp;<a href="http://opencsv.sourceforge.net/">http://opencsv.sourceforge.net</a>.<br>
+licence Apache version 2. Le code source est disponible ici&nbsp;<a href="http://opencsv.sourceforge.net/">http://opencsv.sourceforge.net</a>.<br>
 <br>
 Ce logiciel utilise un convertisseur de devises
-inspiré par une classe écrite par Thomas Knierim sous license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
+inspiré par une classe écrite par Thomas Knierim sous licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
 Public License</a>. Le code source de ce convertisseur est inclus dans les sources
 de Yapbam (net.yapbam.currency).<br>
 <br>
@@ -65,7 +64,7 @@ Kelvin</a>. Son code source est inclus dans les sources de Yapbam
 (net.yapbam.gui.util.XTableColumnModel).<br>
 <br>
 Ce logiciel utilise un composant écrit par <a href="http://terai.xrea.jp/">Atsuhiro Terai</a> sous
-license <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
+licence <a href="http://www.gnu.org/licenses/gpl-3.0.html">General
 Public License</a>. Son code est inclus dans les sources de
 Yapbam (terai.xrea.jp.DndTabbedPane).<br>
 <br>
