--- a/Yapbam/deliveryProcess.html
+++ b/Yapbam/deliveryProcess.html
@@ -35,7 +35,7 @@ text-decoration: underline;
       <li>Run the deployer in project YapbamDeployment (Be aware to set the
         right versions in the program arguments).<br>
         Wait for it completes (it is long as this class upload Yapbam to
-        sourceForge).</li>
+        sourceForge).<br><span style="font-weight: bold; text-decoration: underline;">Copy the release notes on the official site</span> (the deployer deploys only on sourceforge)</li>
       <li>Test that the autoupdate is ok with a copy of the previous version of
         yapbam. Also test that the&nbsp;archives on sourceforge are ok ...
         sometimes, upload results in a partial file.</li>
